Colab을 통해 생성됨

--- a/SheetMusic_Score_Project/notebooks/colab_entry.ipynb
+++ b/SheetMusic_Score_Project/notebooks/colab_entry.ipynb
@@ -18,7 +18,7 @@
       "cell_type": "code",
       "source": [
         "# git clone\n",
-        "!git clone https://github.com/KANG-HYUNIL/AudioTrain\n",
+        "!git clone --recursive https://github.com/KANG-HYUNIL/AudioTrain\n",
         "\n"
       ],
       "metadata": {
@@ -537,7 +537,7 @@
         "id": "ecc24e0b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 151
+          "height": 188
         },
         "outputId": "ed609e4a-e936-4f2a-823c-2bc6fdd1387b"
       },
